[package]
name = "zera_oracle"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
# Web
rocket = { version = "0.5.1", features = ["json", "secrets", "tls"] }
rocket_cors = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_with = "3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Time/ids
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Auth/crypto
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
argon2 = "0.5"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Async/util
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
thiserror = "1"
anyhow = "1"
futures = "0.3"
tokio-stream = "0.1"
dashmap = "5"

# CLI/env
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
dialoguer = "0.11"

# Database (SQLite)
r2d2 = "0.8"
r2d2_sqlite = { version = "0.22", features = ["bundled"] }

# Pagination/validation helper
percent-encoding = "2"

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build", "git", "cargo"] }

[package.metadata.vcs]
# Helpful for tracing build provenance
git-describe = true
